# Spaces

./: .envrc  .envrc.development  .envrc.production  .gitignore  Gemfile  README.md  Rakefile  api.rb  config.rb  config.ru  package-lock.json  package.json  spaces.gemspec  step_precedence.csv  test.irb  test.rb  x_create_by.rb  x_create_new.rb
api/: arenas.rb  blueprints.rb  crud.rb  import.rb  metrics.rb  packing.rb  provisioning.rb  publications.rb  resolutions.rb  spaces.rb  system.rb  universe.rb
api/arenas/: resolutions.rb
api/blueprints/: icons.rb  licenses.rb  readmes.rb
api/helpers/: crud.rb  packing.rb  system.rb  topology.rb
config/: mount.rb  warmup.rb
deployment/common/: Dockerfile.builder.end.tmpl  (+1 more)
lib/: spaces.rb
resolution/propellor/: config.cabal
resolution/propellor/src/Local/Property/: LetsEncrypt.hs
ruby/: x_relations.rb
src/: file.rb  requires.rb  universe.rb
tasks/: .gitignore  routes.rb
tests/: arenas.rb  blueprinting.rb  blueprints.rb  domains.rb  packing.rb  provisioning.rb  publishing.rb  resolutions.rb  resolving.rb  tenants.rb  test.rb
web/: app.rb  server.rb
x/: aws.rb  base_image.rb  controllers.rb  demo.rb  docker.rb  docker_local.rb  docker_services.rb  doug_image.rb  images.rb  infrastructure.rb  jscripts.rb  oscripts_docker.rb  providers.rb  scripts.rb  scripts_base_image.rb  scripts_docker.rb  scripts_docker_database.rb  scripts_docker_owncloud.rb  scripts_docker_services.rb  scripts_domains.rb  scripts_export_new.rb  scripts_lxd.rb  scripts_mariadb.rb  scripts_providers.rb  universe.rb  universes.rb
(+2728 files in other folders)
